--- a/src/components/contact/contact.styles.css
+++ b/src/components/contact/contact.styles.css
@@ -1,17 +1,17 @@
 .contact-container {
   position: absolute;
   width: 50vw;
-  height: 100%;
+  height: 135vh;
   top: 0;
   right: 0;
   border-radius: 10px;
   background-color: #1f0042;
+  background-size: contain;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
   padding: 0rem 2rem;
   z-index: 1000;
-  transition: all 0.5s;
+  transition: all 1s;
   margin-top: -1rem;
-  backdrop-filter: blur(4px);
 }
 
 .contact-heading {
@@ -107,9 +107,11 @@ textarea {
   flex-direction: column;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 720px) {
   .contact-container {
     width: 100vw;
+    min-height: 100vh;
+    background-size: contain;
   }
 
   .btn--close-modal {
