implemented math func for the stars and issues count

--- a/src/routes/navigation/navigation.styles.css
+++ b/src/routes/navigation/navigation.styles.css
@@ -109,7 +109,8 @@
   }
 
   .logo-container {
-    flex-basis: 20%;
+    margin-top: .6rem;
+    /* flex-basis: 20%; */
   }
   .hamburger {
     display: block;
