--- a/src/components/contact/contact.styles.css
+++ b/src/components/contact/contact.styles.css
@@ -1,14 +1,13 @@
 .contact-container {
   position: absolute;
   width: 50vw;
-  height: 150vh;
   top: 0;
   right: 0;
   border-radius: 10px;
   background-color: #1f0042;
   background-size: contain;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
-  padding: 0rem 2rem;
+  padding: 0rem 2rem 2rem 2rem;
   z-index: 1000;
   transition: all 1s;
   margin-top: -1rem;
