--- a/src/components/directory/directory.styles.css
+++ b/src/components/directory/directory.styles.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: center;
+  /* justify-content: space-between; */
   align-items: center;
   color: #fff;
-  font-weight: normal;
+
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .main {
@@ -81,7 +81,9 @@
 .wait-list {
   /* margin-top: 1rem; */
   display: flex;
-  margin: 1rem auto;
+  justify-content: center;
+  margin: 0 auto;
+  width: 70%;
   /* max-height: 2rem; */
 }
 .email-input {
@@ -107,7 +109,6 @@
   color: #fff;
   cursor: pointer;
   font-size: 11px;
-
 }
 .btn:hover {
   background-color: #4a4394;
@@ -134,6 +135,7 @@
 
 .footer {
   font-weight: 100;
+  margin: 0;
 }
 
 .footer p {
@@ -165,10 +167,12 @@
   .directory-container {
     width: 90%;
     margin: 0 auto;
+  
+    /* height: 100%; */
   }
 
- .directory-container br{
-display: none;
+  .directory-container br {
+    display: none;
   }
   .main {
     width: 100%;
@@ -179,7 +183,6 @@ display: none;
   }
 
   .main-text {
-    /* vertical-align: middle; */
     font-size: 13px;
   }
 
@@ -196,21 +199,21 @@ display: none;
   }
 
   .wait-list {
-    height: 3rem;
+    height: 2.5rem;
+    /* margin: 0; */
   }
 
   .email-input {
-    background: none;
-    background-color: white;
-    color: grey;
     font-size: 12px;
-    /* padding: 10px 10px 10px 20px; */
-    width: 70%;
-    border: none;
-    border-radius: 20px;
+    width: 90%;
   }
   .email-input:focus {
     outline: none;
+  }
+
+  .directory-container .footer {
+    margin: 0;
+padding: 0;
   }
 
   .btn {
