--- a/src/components/repo-list/repo-list.styles.css
+++ b/src/components/repo-list/repo-list.styles.css
@@ -8,9 +8,7 @@
   color: #fff;
   border-radius: 5px;
   padding: 10px 30px;
-
   position: relative;
-
   backface-visibility: hidden;
   transform: translateZ(0);
   transition: transform 0.7s ease-out;
@@ -45,8 +43,8 @@
 }
 
 .text__area h2 {
-  margin: -0.2rem 0;
-  font-size: 1.7rem;
+  margin: -0.3rem 0;
+  font-size: 1.6rem;
   font-weight: 500;
 }
 
@@ -57,7 +55,7 @@
 }
 .stars,
 .issues {
-  border: 1px solid red;
+  border: 3px dashed rgb(153, 103, 103);
   padding: 5px;
 }
 
@@ -87,7 +85,8 @@
   }
   .stars,
   .issues {
-    padding: 2px;
+    padding: 0;
     border: none;
+    /* flex-basis: 30%; */
   }
 }
