--- a/src/routes/navigation/navigation.styles.css
+++ b/src/routes/navigation/navigation.styles.css
@@ -48,6 +48,18 @@
   cursor: pointer;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
 /* Hamburger menu */
 .hamburger {
   color: #fff;
@@ -92,11 +104,12 @@
     right: 0%;
 
     display: flex;
-    gap: 2rem;
+    gap: 1.5rem;
     font-size: 18px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     width: 50vw;
     height: 60vh;
     border-top-left-radius: 10px;
@@ -110,7 +123,7 @@
 
   .logo-container {
     margin-top: .6rem;
-    /* flex-basis: 20%; */
+
   }
   .hamburger {
     display: block;
@@ -125,7 +138,6 @@
   }
 
   .nav-link:first-child {
-    padding-top: 1rem;
     margin: 0;
   }
 
