--- a/src/components/directory/directory.styles.css
+++ b/src/components/directory/directory.styles.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  /* justify-content: space-between; */
   align-items: center;
   color: #fff;
 
   position: relative;
-  height: 100vh;
+  height: 100%;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 /* THE HEADER */
@@ -15,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 7rem;
+  /* margin-bottom: 7rem; */
   font-weight: 300;
 }
 
@@ -120,8 +121,11 @@
 .btn p {
   padding: 0 0.5rem;
 }
-
-/* .footer-bg{
+.wait-list .btn {
+  display: flex;
+}
+/* 
+.footer-bg{
   bottom: -10rem;
   position: absolute;
   background-color: #201537;
@@ -131,15 +135,16 @@
   border-top-right-radius: 50%;
   border-radius: 50%;
   width: 50rem;
-  height: 25rem;
+  height: 5rem;
   filter: blur(2px);
   border-bottom: 0;
 } */
 
 /* FOOTER SECTION */
-.footer {
+.directory-container .footer {
   font-weight: 100;
-  margin: 0;
+  margin-top: 8rem;
+  /* z-index: 10; */
 }
 
 .footer p {
@@ -168,13 +173,12 @@
   margin-top: -1rem;
 }
 
-
 /* MEDIA QUERY */
 @media (max-width: 576px) {
   .directory-container {
     width: 90%;
     margin: 0 auto;
-  
+    max-height: 100vh;
     /* height: 100%; */
   }
 
@@ -182,7 +186,9 @@
     display: none;
   }
   .main {
+    margin-top: 1.5rem;
     width: 100%;
+    gap: 1.5rem;
   }
   .main h1 {
     letter-spacing: 2px;
@@ -218,8 +224,8 @@
   }
 
   .directory-container .footer {
-    margin: 0;
-padding: 0;
+    margin-bottom: 1rem;
+    /* padding: 0; */
   }
 
   .btn {
