--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #14012f;
-  position: relative;
+  /* position: relative; */
+  overflow-x: hidden;
 }
 
 code {
