--- a/src/routes/navigation/navigation.styles.css
+++ b/src/routes/navigation/navigation.styles.css
@@ -30,23 +30,6 @@
   padding: 0px 10px;
   cursor: pointer;
 }
-.nav-link:first-child {
-  margin-right: -2rem;
-}
-
-.btn--close-nav {
-  font-family: inherit;
-  color: #fff;
-  position: absolute;
-  top: 0rem;
-  left: 1rem;
-  font-size: 2.5rem;
-  cursor: pointer;
-  border: none;
-  background: none;
-  display: none;
-  cursor: pointer;
-}
 
 .overlay {
   position: fixed;
@@ -55,7 +38,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(6px);
   z-index: 100;
   transition: all 0.5s;
 }
@@ -94,47 +77,63 @@
   transform: translateY(16px);
 }
 
+.open {
+  transform: rotate(90deg);
+  transform: translateY(0px);
+}
+
+.open .hamburger-top {
+  transform: rotate(45deg) translateY(6px) translate(6px);
+}
+
+.open .hamburger-middle {
+  display: none;
+}
+
+.open .hamburger-bottom {
+  transform: rotate(-45deg) translateY(6px) translate(-6px);
+}
+
 @media (max-width: 576px) {
   .navigation {
     display: flex;
   }
   .nav-links-container {
     position: absolute;
-    top: 0%;
-    right: 0%;
+    top: 12%;
+    right: 50%;
+    transform: translate(50%, 0%);
 
     display: flex;
-    gap: 1.5rem;
+    gap: 2.5rem;
     font-size: 18px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    width: 50vw;
-    height: 60vh;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    width: 80vw;
+    max-height: 40vh;
+    border-radius: 10px;
     background-color: #49108c;
     box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.25);
-    z-index: 1000;
-    transition: all 0.5s;
-    margin-top: -1.1rem;
+    z-index: 10;
+    transition: transform .3s ease-out;
+  }
+
+  .nav-link{
+    margin: 0;
   }
 
   .logo-container {
-    margin-top: .6rem;
-
+    margin-top: 0.6rem;
   }
+
   .hamburger {
     display: block;
   }
 
   .hidden-nav {
     display: none;
-  }
-
-  .btn--close-nav {
-    display: flex;
   }
 
   .nav-link:first-child {
